# space-tech-challenge-2022

./: CMakeLists.txt  README.md
include/: space_tech_20200.h
src/: main.cpp
